--- a/calculator-server/webapp/src/app/root/calculator/input-amount/input-amount.component.html
+++ b/calculator-server/webapp/src/app/root/calculator/input-amount/input-amount.component.html
@@ -1,4 +1,13 @@
 <div>
-  <label for="name">Montant désiré : </label><br>
-  <input id="name" type="text" [formControl]="montant">
+  <form [formGroup]="form">
+    <label for="amount">Montant désiré : </label><br>
+    <button title="Diminuer le montant" (click)="nextPreviousValue()" name="minus" id="minus">−</button>
+    <input autofocus id="amount" type="text" formControlName="amount">
+    <button title="Augmenter le montant" (click)="nextPreviousValue(true)" name="plus" id="plus">+</button>
+    <br><br>
+    <button id="button-valider" type="submit" (click)="searchCombination()"
+            name="button-valider" title="Valider"
+            [disabled]="!form.get('amount')?.value"> VALIDER
+    </button>
+  </form>
 </div>
