--- a/calculator-server/webapp/src/app/app.component.html
+++ b/calculator-server/webapp/src/app/app.component.html
@@ -1,5 +1,13 @@
+<app-trade-interface></app-trade-interface>
+
+
+<!--
 <app-calculator></app-calculator>
 
 <hr>
 
 <app-calculator-reactive-form></app-calculator-reactive-form>
+-->
+
+
+
